# Another-Snake-Clone

./: .gitignore  CMakeLists.txt  README.md
include/: Application.hpp  Constants.hpp  GameObjects.hpp
src/: Application.cpp  GameObjects.cpp  Main.cpp
